[package]
name = "upy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
notify = "4.0.17"
