[package]
name = "upy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.4"
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.7"
notify = "5.1.0"
